Added extra fetching of restricted data to ensure requested lists of objects are as full as possible

--- a/restrictedobjects/CHANGELOG
+++ b/restrictedobjects/CHANGELOG
@@ -1,3 +1,8 @@
+2012-08-03 v1.0.0
+-----------------
+
+* Version bump for SS3!
+* Added index definitions for required bits
 
 2012-05-02 v0.3.1
 -----------------
