--- a/restrictedobjects/CHANGELOG
+++ b/restrictedobjects/CHANGELOG
@@ -1,3 +1,12 @@
+2012-08-09 v1.0.2
+-----------------
+
+* If a filtered list is queried with a limit, but the list isn't as long as 
+  the required limit because some objects have been permission-filtered out,
+  repeat the query with a larger limit and set a property indicating what
+  the actual query limit that should be used for the next result set
+  should be. 
+
 2012-08-08 v1.0.1
 -----------------
 
