--- a/queuedjobs/CHANGELOG
+++ b/queuedjobs/CHANGELOG
@@ -1,3 +1,24 @@
+2012-09-13 v1.8.1
+-----------------
+
+* Improved layout of jobs table to keep previous 5 mins worth of finished jobs
+  and display messages better
+
+2012-09-12 v1.8.0
+-----------------
+
+* Added ability to have jobs executed by Gearman
+* Removed the 'immediate' mode feature; this can be done by using the 
+  ImmediateQueueHandler via config instead - 
+
+---
+Name: localproject
+After: '#queuedjobsettings'
+---
+Injector:
+  QueueHandler: 
+    class: ImmediateQueueHandler
+
 2012-09-06 v1.7.0
 -----------------
 
